--- a/src/classes/SCMT_Utils_Test.cls
+++ b/src/classes/SCMT_Utils_Test.cls
@@ -21,26 +21,26 @@ private class SCMT_Utils_Test
         rec.Name = 'Desk Audit Fields Test';
 
         // set desk id indicating it was migrated from desk
-        rec.SCMT__DeskId__c = 12345;
+        rec.DeskId__c = 12345;
 
         // set the desk created_at and updated_at fields
-        rec.SCMT__DeskCreatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
-        rec.SCMT__DeskUpdatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
+        rec.DeskCreatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
+        rec.DeskUpdatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
 
         // insert the account
         insert rec;
 
         // update the account object
-        rec = [SELECT SCMT__DeskId__c, SCMT__DeskCreatedAt__c, SCMT__DeskUpdatedAt__c, CreatedDate, LastModifiedDate
+        rec = [SELECT DeskId__c, DeskCreatedAt__c, DeskUpdatedAt__c, CreatedDate, LastModifiedDate
             FROM Account
             WHERE Id = :rec.Id];
 
         // check that the desk id was set
-        System.assertEquals(12345, rec.SCMT__DeskId__c);
+        System.assertEquals(12345, rec.DeskId__c);
 
         // check that the desk created_at and updated_at fields were set
-        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.SCMT__DeskCreatedAt__c);
-        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.SCMT__DeskUpdatedAt__c);
+        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.DeskCreatedAt__c);
+        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.DeskUpdatedAt__c);
 
         // check if the audit fields can be set on insert
         if (Schema.sObjectType.Case.fields.CreatedDate.isCreateable())
@@ -61,26 +61,26 @@ private class SCMT_Utils_Test
         rec.LastName = 'TEST';
 
         // set desk id indicating it was migrated from desk
-        rec.SCMT__DeskId__c = 12345;
+        rec.DeskId__c = 12345;
 
         // set the desk created_at and updated_at fields
-        rec.SCMT__DeskCreatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
-        rec.SCMT__DeskUpdatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
+        rec.DeskCreatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
+        rec.DeskUpdatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
 
         // insert the account
         insert rec;
 
         // update the account object
-        rec = [SELECT SCMT__DeskId__c, SCMT__DeskCreatedAt__c, SCMT__DeskUpdatedAt__c, CreatedDate, LastModifiedDate
+        rec = [SELECT DeskId__c, DeskCreatedAt__c, DeskUpdatedAt__c, CreatedDate, LastModifiedDate
             FROM Contact
             WHERE Id = :rec.Id];
 
         // check that the desk id was set
-        System.assertEquals(12345, rec.SCMT__DeskId__c);
+        System.assertEquals(12345, rec.DeskId__c);
 
         // check that the desk created_at and updated_at fields were set
-        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.SCMT__DeskCreatedAt__c);
-        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.SCMT__DeskUpdatedAt__c);
+        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.DeskCreatedAt__c);
+        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.DeskUpdatedAt__c);
 
         // check if the audit fields can be set on insert
         if (Schema.sObjectType.Case.fields.CreatedDate.isCreateable())
@@ -100,26 +100,26 @@ private class SCMT_Utils_Test
         // set required fields
 
         // set desk id indicating it was migrated from desk
-        rec.SCMT__DeskId__c = 12345;
+        rec.DeskId__c = 12345;
 
         // set the desk created_at and updated_at fields
-        rec.SCMT__DeskCreatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
-        rec.SCMT__DeskUpdatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
+        rec.DeskCreatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
+        rec.DeskUpdatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
 
         // insert the account
         insert rec;
 
         // update the account object
-        rec = [SELECT SCMT__DeskId__c, SCMT__DeskCreatedAt__c, SCMT__DeskUpdatedAt__c, CreatedDate, LastModifiedDate
+        rec = [SELECT DeskId__c, DeskCreatedAt__c, DeskUpdatedAt__c, CreatedDate, LastModifiedDate
             FROM Case
             WHERE Id = :rec.Id];
 
         // check that the desk id was set
-        System.assertEquals(12345, rec.SCMT__DeskId__c);
+        System.assertEquals(12345, rec.DeskId__c);
 
         // check that the desk created_at and updated_at fields were set
-        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.SCMT__DeskCreatedAt__c);
-        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.SCMT__DeskUpdatedAt__c);
+        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.DeskCreatedAt__c);
+        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.DeskUpdatedAt__c);
 
         // check if the audit fields can be set on insert
         if (Schema.sObjectType.Case.fields.CreatedDate.isCreateable())
@@ -139,26 +139,26 @@ private class SCMT_Utils_Test
         // set required fields
 
         // set desk id indicating it was migrated from desk
-        rec.SCMT__DeskId__c = 12345;
+        rec.DeskId__c = 12345;
 
         // set the desk created_at and updated_at fields
-        rec.SCMT__DeskCreatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
-        rec.SCMT__DeskUpdatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
+        rec.DeskCreatedAt__c = Datetime.valueOf(LAST_MODIFIED_DATE_TIME);
+        rec.DeskUpdatedAt__c = Datetime.valueOf(CREATED_DATE_TIME);
 
         // insert the account
         insert rec;
 
         // update the account object
-        rec = [SELECT SCMT__DeskId__c, SCMT__DeskCreatedAt__c, SCMT__DeskUpdatedAt__c, CreatedDate, LastModifiedDate
+        rec = [SELECT DeskId__c, DeskCreatedAt__c, DeskUpdatedAt__c, CreatedDate, LastModifiedDate
             FROM Case
             WHERE Id = :rec.Id];
 
         // check that the desk id was set
-        System.assertEquals(12345, rec.SCMT__DeskId__c);
+        System.assertEquals(12345, rec.DeskId__c);
 
         // check that the desk created_at and updated_at fields were set
-        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.SCMT__DeskCreatedAt__c);
-        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.SCMT__DeskUpdatedAt__c);
+        System.assertEquals(Datetime.valueOf(LAST_MODIFIED_DATE_TIME), rec.DeskCreatedAt__c);
+        System.assertEquals(Datetime.valueOf(CREATED_DATE_TIME), rec.DeskUpdatedAt__c);
 
         // check if the audit fields can be set on insert
         if (Schema.sObjectType.Case.fields.CreatedDate.isCreateable())
